--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Big boy study guide</title>
+    <title>Big Boy Study Guide</title>
   </head>
   <body>
     <header id="top">
-      <h1>Big boy study guide</h1>
+      <h1>Big Boy Study guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
