--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     </header>
     <main>
       <section class="card" id="html-section">
+        h2>HTML</h2>
+     <ul>
+       <li>Big notes</li>
+       <li>Little notes</li>
+     </ul>
 
       </section>
    
