--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
     </header>
     <main>
       <section class="card" id="html-section">
-        h2>HTML</h2>
-     <ul>
-       <li>Big notes</li>
-       <li>Little notes</li>
-     </ul>
-
+        <h2>HTML</h2>
+        <ul>
+          <li>big big</li>
+          <li>big little</li>
+        </ul>
       </section>
    
       <section class="card" id="css-section">
