--- a/index.html
+++ b/index.html
@@ -21,15 +21,23 @@
       </section>
    
       <section class="card" id="css-section">
-   
+        <h2>CSS</h2>
+        <ul>
+          <li>Orange</li>
+        </ul>
       </section>
    
       <section class="card" id="git-section">
-   
+        <h2>Git</h2>
+        <ul>
+          <li>Apple</li>
+        </ul>
       </section>
    
       <section class="card" id="javascript-section">
-   
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Peach</li>
       </section>
     </main>
 
